# jacoco-badge-generator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  JacocoBadgeGenerator.py  README.md  action.yml  entrypoint.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  fix-major-release-num.yml  major-release-num.yml  pypi-publish.yml
src/: JacocoBadgeGenerator.py  TextLength.py  entrypoint.py
src/jacoco_badge_generator/: __init__.py  __main__.py  coverage_badges.py
tests/: 0.json  0b.json  100.json  100b.json  599.json  599b.json  60.json  60b.json  70.json  70b.json  78.json  78b.json  80.json  80b.json  87.json  87b.json  899.json  899b.json  90.json  90b.json  99.json  999.json  999b.json  99b.json  branches100.csv  branches90.csv  branches901.csv  branchesDivZero.csv  custom1.json  custom2.json  integration-actions-mode.py  integration-cli-mode.py  integration.py  jacoco100.csv  jacoco90.csv  jacoco901.csv  jacocoDivZero.csv  multi1.csv  multi2.csv  reportTest.json  (+3 more)
